# megatalk-streamlit

./: LICENSE.md  Pipfile  README.md  mega_pizza_app.py  pizza_lib.py  pyproject.toml  requirements.txt  svg-conversion.sh
